# parallel-compute-hw

cuda/: Makefile  rbf.cu  rbf2.cu
openmp1/: CMakeLists.txt  main.cpp
openmp2/: Makefile  main.cpp
openmpi-question1/: 1  1.c  makefile
openmpi-question2/: 2  2.c  makefile
